♻️ Updates to genai v1, markdown-it, and UI
Updates the project to use the latest version of the Google AI SDK, switches from marked to markdown-it for markdown parsing and updates the UI entrypoint.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
+		"module": "es2020",
+		"moduleResolution": "node",
 		"lib": ["ES2022", "dom"],
 		"sourceMap": true,
 		"rootDir": "src",
