--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@google/generative-ai": "^0.9.0",
-		"@types/marked": "^6.0.0",
-		"marked": "^15.0.11"
+		"@google/genai": "^1.0.0",
+		"highlight.js": "^11.11.1",
+		"markdown-it": "^14.1.0"
 	}
 }
